--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,64 @@
+spring:
+  profiles: production
+  datasource:
+    url: jdbc:mariadb://localhost:3306/lightningLottery
+    username: lightningLottery
+    password: lightningLottery
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
+  flyway:
+    enabled: true
+    baselineOnMigrate: true
+server:
+  port: 8080
+  servlet:
+    context-path: /lightningLottery	
+logging:
+  level:
+    root: INFO
+---
 
+spring:
+  profiles: test
+  datasource:
+    url: jdbc:mariadb://localhost:3306/lightningLottery
+    username: lightningLottery
+    password: lightningLottery
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
+  flyway:
+    enabled: true
+    baselineOnMigrate: true
+server:
+  port: 8080
+  servlet:
+    context-path: /lightningLottery	
+logging:
+  level:
+    root: INFO
+---
+
+spring:
+  profiles: development
+  datasource:
+    url: jdbc:mariadb://localhost:3306/lightningLottery
+    username: lightningLottery
+    password: lightningLottery
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
+  flyway:
+    enabled: true
+    baselineOnMigrate: true
+server:
+  port: 8080
+  servlet:
+    context-path: /lightningLottery	
+logging:
+  level:
+    root: DEBUG
