--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<!-- Testing -->
@@ -108,13 +102,25 @@
 			<version>1.2</version>
 		</dependency>
 
-	
-   <dependency>
-     <groupId>org.scala-lang</groupId>
-     <artifactId>scala-library</artifactId>
-     <version>2.13.0</version>
-   </dependency>
- </dependencies>
+		<!-- FOR TESTING PURPOSES -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.15.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>2.15.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -130,7 +136,7 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-        	</plugin>
+			</plugin>
 		</plugins>
 	</build>
 
