--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,15 +21,15 @@ logging:
 ---
 
 spring:
-  profiles: test
+  profiles: docker
   datasource:
-    url: jdbc:mariadb://localhost:3306/lightningLottery
-    username: lightningLottery
-    password: lightningLottery
+    url: jdbc:mariadb://db:3306/lightninglottery
+    username: lightninglottery
+    password: lightninglottery
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: validate #create-drop
+      ddl-auto: create-drop
   flyway:
     enabled: true
     baselineOnMigrate: true
