chore(docker-compose): docker image for backend code gets pulled from docker hub

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - db_data:/var/lib/mysql
 
   backendServer:
-    image: bitcoin-slovenia/lightning-loterry-backend
+    image: bitcoinslovenia/lightningloterry:latest
     container_name: lightningLoterryBackend
     depends_on:
         - db
